docs: make flattened directions clearer

--- a/docs/pages/verifying-contracts.mdx
+++ b/docs/pages/verifying-contracts.mdx
@@ -20,9 +20,9 @@ cast call <CONTRACT ADDRESS> "version()(string)" --rpc-url "<RPC_URL>"
 
 ## Copy the flattened file of that contract version
 
-For `Contest.sol` look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi).
+For `Contest` contracts, look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi).
 
-For `RewardsModule.sol` look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi/modules)
+For `RewardsModule` contracts, look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi/modules)
 
 ## Verify the contract
 
