chore: flesh out Get Started more

--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -1,3 +1,5 @@
 # Get started
 
-Hello world!
+Make a contest! You can do it in 3 minutes at [jokerace.io](jokerace.io) on any EVM chain that you want!
+
+We support 45+ chains at this point, and if we don't have one you want please feel free to make a chain request [here](https://github.com/jk-labs-inc/jokerace/issues/new?assignees=&labels=chain&projects=&template=chain_request.md&title=chain%3A+) and we can get integrated!
