format: fix some formatting and typos

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -10,9 +10,9 @@ Popular contest use cases include grants, hackathons, governance, bounties, idea
 
 ## What kind of allowlists are possible?
 
-You can allowlist any onchain addresses you want, so you can get creative. Ultimately you can just place the addresses in column A of a csv, the voting power in column B, and upload to our site when you create a contest. So you have full freedom to determine criteria however you want.
+You can allowlist any onchain addresses you want, so you can get creative. Ultimately you can just place the addresses in column A of a CSV, the voting power in column B, and upload to our site when you create a contest. So you have full freedom to determine criteria however you want.
 
-Want to save time? We’ve built some presets so that you can just drop the address of an NFT or token, and we’ll allowlist all the voters—no csv required.
+Want to save time? We’ve built some presets so that you can just drop the address of an NFT or token, and we’ll allowlist all the voters—no CSV required.
 
 ## So token-voting is possible?
 
@@ -50,7 +50,7 @@ Onchain contests give you five benefits you couldn’t get offchain.
 4. Executability. Anyone can build modules on top of JokeRace so that the result of a vote triggers an action on their service. Hats has already built a module to give winners role-based NFTs, but other modules could include minting winning submissions or executing a winning piece of code. By building onchain, we can be the decision layer of the internet.
 
 
-5. Gamification. Give credentials that let winners move up the ranks of future contests. Incentivize your community to complete onchain actions on your service to get more voting power. Livestream a contest with limited contestants and let thousands of voters vote from home. Or maybe most significantly, let submitters know they can (and ofen do) create their own incentives for voters by leveraging onchain data.
+5. Gamification. Give credentials that let winners move up the ranks of future contests. Incentivize your community to complete onchain actions on your service to get more voting power. Livestream a contest with limited contestants and let thousands of voters vote from home. Or maybe most significantly, let submitters know they can (and often do) create their own incentives for voters by leveraging onchain data.
 
 ## Can you delete submissions?
 
@@ -62,7 +62,7 @@ ENS is not currently compatible with allowlists. If you’re manually uploading 
 
 ## I can’t submit or vote even though I should be allowlisted—what’s happening?
 
-Go to “Parameters” on the contest page, download the allowlist, and make sure your address was on it. If not, please file a bug report.
+Go to “Parameters” on the contest page, download the allowlist, and make sure your address was on it. If not, please [file a bug report](https://github.com/jk-labs-inc/jokerace/issues/new?assignees=&labels=bug&projects=&template=bug_report.md&title=bug%3A+).
 
 ## I created a contest and want to edit it. Can I update any part of it?
 
@@ -70,7 +70,7 @@ You cannot currently edit contests, but you can set your contest to unlisted (go
  
 ## How do I find the contract address for a contest?
 
-Copy the url of the contest. The last string of letters and numbers is the contract address. Every url is formatted as follows: www.jokerace.io/contest/[chain]/[contract-address]
+Copy the url of the contest. The last string of letters and numbers is the contract address. Every url is formatted as follows: `www.jokerace.io/contest/[chain]/[contract-address]`
 
 ## Why can’t I let anyone vote?
 
