docs: add rewards pool faq

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -119,3 +119,7 @@ However, the person whose submission you deleted does not get a bonus submission
 ## If a submission is deleted can it receive rewards?
 
 No, deleted submissions cannot earn rewards—they will be disqualified and other entries will take their place in the ranking in the contest. Please note that submissions can only be deleted while the contest is running (not after).
+
+## Do rewards in the rewards pool need to be ERC-20s on the same chain as the contest?
+
+Yes. If you want to reward ERC-20s from another chain, please bridge them over to the same chain as the contest first, and then use them to fund the pool. If you want to reward NFTs, you can do so manually by sending them directly to the winners.
