docs: add more faqs

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -123,3 +123,131 @@ No, deleted submissions cannot earn rewards—they will be disqualified and othe
 ## Do rewards in the rewards pool need to be ERC-20s on the same chain as the contest?
 
 Yes. If you want to reward ERC-20s from another chain, please bridge them over to the same chain as the contest first, and then use them to fund the pool. If you want to reward NFTs, you can do so manually by sending them directly to the winners.
+
+## Do rewards in the rewards pool need to be ERC-20s on the same chain as the contest?
+
+Yes. If you want to reward ERC-20s from another chain, please bridge them over to the same chain as the contest first, and then use them to fund the pool. If you want to reward NFTs, you can do so manually by sending them directly to the winners. 
+
+## Which chains does JokeRace currently support monetization on?
+
+Currently monetization is live on:
+
+- Arbitrum One
+- Base
+- Ethereum Mainnet
+- Linea
+- Mode
+- Optimism
+- Polygon
+- PolygonZk
+- Scroll
+- Sepolia Testnet
+- Zora
+
+## Which chains is JokeRace live on?
+
+Mainnet:
+- Aevo
+- ArbitrumOne
+- Arthera
+- AstriaDusk2
+- AvaxCChain
+- Base
+- BNB
+- Celo
+- DegenChain
+- EOS
+- Evmos
+- Fantom
+- Fraxtal
+- Fuse
+- Gnosis
+- Holesky
+- Kroma
+- Linea
+- LootChain
+- Lukso
+- Lyra
+- Mainnet
+- Manta Pacific
+- Mantle
+- Mode
+- NautilusChain
+- Near
+- NeonDevnet
+- Optimism
+- QChain
+- Quartz
+- RedstoneHolesky
+- Ronin
+- Scroll
+- Palm
+- Polygon
+- PolygonZk
+- Proteus
+- Unique
+- Vitruveo
+- Zora
+
+Testnet:
+- Arthera
+- Arbitrum One
+- Base
+- Berachain
+- Celo
+- EOS
+- Evmos
+- Fantom
+- Frame
+- Fraxtal
+- Gnosis
+- Goerli
+- Linea
+- Lit
+- LootChain
+- Lukso
+- Mantle
+- Mode
+- Near
+- Optimism
+- Palm
+- Polygon
+- PolygonZk
+- QChain
+- Ronin
+- Scroll
+- ScrollSepolia
+- Sepolia
+- Taiko
+- X1
+- Zeta
+
+And finally:
+
+- Ethereum Mainnet (we do not recommend creating a contest here, as fees for using the chain can often run 100x the costs on other chain)
+
+## How can I use JokeRace for points and reputation?
+
+One easy way to imagine JokeRace is as a ledger of user preferences and attestations. Whenever one person votes for an entry, they’re expressing a preference for it—and attesting to its value. Likewise whenever a person who has submitted an entry earns a vote, they’re earning an attestation that their entry was valuable to the community that voted.
+
+What this means is that even if you lose a contest, you still win—because you’re earning reputation. For example, if a community designed a simple point system that offered one “point” for every vote a person received, they would be able to gauge the value that this person had contributed to the community—by merely adding up the onchain votes over time. With a legitimate voterpool, this system couldn’t be botted or overrun by airdrop farmers. Submitters would actually have to create value for the community to earn value in return. 
+
+But this is just one example. In fact, because JokeRace is fully onchain, you can use any data point from contests to determine your own system of rewarding reputation. We actually created a Flipside dashboard you can use if you want to input your contest:
+
+https://flipsidecrypto.xyz/0xd698e31229aB86334924ed9DFfd096a71C686900/jokerace-analytics-UIs4gX
+
+Some of our users have created Dune dashboards as well with queries. Feel free to fork any of these for your own use cases.
+
+## Is JokeRace a quests platform?
+
+JokeRace is a contests platform, not a quests platform—though it is actually quite complementary with most quests platforms.
+
+Quests platforms offer incentives for anyone who performs a series of tasks with a service. 
+
+Contests only offer rewards to winners, who are selected by voters.
+
+Even then, contest creators have the option whether or not to add a rewards pool to their contest and may elect to run a contest without one (if, for example, they are using a contest to make a decision, or if they want to offer other kinds of rewards besides tokens).
+
+While quests platforms are quite good at getting a large quantity of users and bots to perform the same action, contests are good for getting quality users to compete with original entries.
+
+And this is why quests and contests can be complementary. For example, you might just allowlist anyone to submit or vote who’s performed a quest—incentivizing them to perform the quest in order to participate in the contest for greater rewards. Or you might create a quest to incentivize people to submit or vote in a contest to increase engagement. Finally, you might use the metrics from a contest to determine who your quality users are—for example, giving one “point” for each vote that submitters have gotten across your contests. You could then use these metrics to allowlist future quests to prevent bots from participating.
