chore: make faq question more concise

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -274,7 +274,7 @@ Monetization (you can set submission fees that we split with you 50/50)
 
 If you do choose to submit directly, you’ll need to cover the submission fees for the contest yourself and will lose the advantages above.
 
-## I’m allowlisting addresses that I got from one chain, but I’m deploying my contest to a different chain. (For example, I’m allowlisting anyone who holds a specific token on Ethereum Mainnet, but I’m deploying my contest on Berachain). Will these addresses work across different chains?
+## I’m allowlisting addresses that I got from one chain, but I’m deploying my contest to a different chain. Will these addresses work across different chains?
 
 Yes—with the exception of multisigs. Individual users with hard or soft wallets can use the same accounts on all EVM chains, so if you allowlist one address that you got on one chain, that person will be able to submit or vote on whatever chain you use for your contest. This means you could effectively allowlist token holders on Ethereum Mainnet but have them perform governance entirely on Berachain, for example.
 
