chore: update chains

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -149,14 +149,17 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 
 :::details[Mainnet]
 - Aevo
+- Ancient 8
 - ArbitrumOne
 - Arthera
 - AstriaDusk2
 - AvaxCChain
 - Base
+- Blast
 - BNB
 - Celo
 - DegenChain
+- Dymension
 - EOS
 - Evmos
 - Fantom
@@ -182,6 +185,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Ronin
 - Scroll
 - Sei
+- Syndicate Frame
 - Palm
 - Polygon
 - PolygonZk
@@ -192,10 +196,12 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 :::
 
 :::details[Testnet]
+- Ancient 8
 - Arthera
 - Arbitrum One
 - Base
 - Berachain
+- Blast
 - Celo
 - EOS
 - Evmos
@@ -210,6 +216,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Lukso
 - Mantle
 - Mode
+- Morph
 - Near
 - NeonDevnet
 - Optimism
