chore: update with astar, merlin, and zkfair

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -152,6 +152,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Ancient 8
 - ArbitrumOne
 - Arthera
+- AstarZkEVM
 - AstriaDusk2
 - AvaxCChain
 - Base
@@ -175,6 +176,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Mainnet
 - Manta Pacific
 - Mantle
+- Merlin
 - Mode
 - NautilusChain
 - Near
@@ -192,6 +194,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Proteus
 - Unique
 - Vitruveo
+- ZkFair
 - Zora
 :::
 
@@ -199,6 +202,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Ancient 8
 - Arthera
 - Arbitrum One
+- AstarZkEVM
 - Base
 - Berachain
 - Blast
@@ -215,6 +219,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - LootChain
 - Lukso
 - Mantle
+- Merlin
 - Mode
 - Morph
 - Near
@@ -231,6 +236,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Taiko
 - X1
 - Zeta
+- ZkFair
 :::
 
 And finally:
