wording: grammar correction

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -241,7 +241,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 
 And finally:
 
-- Ethereum Mainnet (we do not recommend creating a contest here, as fees for using the chain can often run 100x the costs on other chain)
+- Ethereum Mainnet (we do not recommend creating a contest here, as fees for using the chain can often run 100x the costs of other chains)
 
 ## How can I use JokeRace for points and reputation?
 
