chore: add inEvm

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -168,6 +168,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Fuse
 - Gnosis
 - Holesky
+- InEVM
 - Kroma
 - Linea
 - LootChain
@@ -214,6 +215,7 @@ Yes. If you want to reward ERC-20s from another chain, please bridge them over t
 - Fraxtal
 - Gnosis
 - Goerli
+- InEVM
 - Linea
 - Lit
 - LootChain
